# gemini-cost-py

./: README.md  pyproject.toml
src/gemini_cost/: __init__.py  core.py
tests/: test_gemini_cost.py
